# virt-viewer

./: .gitpublish  Makefile.am  NEWS  README  README.md  acinclude.m4  autobuild.sh  autogen.sh  configure.ac  git.mk  maint.mk  mingw-virt-viewer.spec.in  prepare-release.sh  virt-viewer.spec.in
bash-completion/: Makefile.am  virt-viewer
data/: Makefile.am  adwaita-icons-needed.wxi.in  remote-viewer.appdata.xml.in  remote-viewer.desktop.in  virt-viewer.nsis.in  virt-viewer.wxs.in
docs/: multimonitor-fullscreen-settings  multimonitor-requirements
icons/24x24/: Makefile.am
m4/: virt-bash-completion.m4  virt-nls.m4
man/: Makefile.am  remote-viewer.pod  virt-viewer.pod
po/: Makefile.am  POTFILES  POTFILES.in  README.md  ach.po  af.mini.po  af.po  af_ZA.po  aln.po  am.mini.po  am.po  anp.mini.po  anp.po  ar.mini.po  ar.po  as.mini.po  as.po  ast.mini.po  ast.po  az.po  bal.mini.po  bal.po  be.mini.po  be.po  bg.mini.po  bg.po  bn.mini.po  bn.po  bn_IN.mini.po  bn_IN.po  bo.mini.po  bo.po  br.mini.po  br.po  brx.mini.po  brx.po  bs.mini.po  bs.po  ca.mini.po  ca.po  (+187 more)
src/: Makefile.am  gbinding.c  glib-compat.c  glib-compat.h  ovirt-foreign-menu.c  ovirt-foreign-menu.h  remote-viewer-connect.c  remote-viewer-connect.h  remote-viewer-connect.xml  remote-viewer-iso-list-dialog.c  remote-viewer-iso-list-dialog.h  remote-viewer-main.c  remote-viewer.c  remote-viewer.h  test-version-compare.c  virt-glib-compat.h  virt-gtk-compat.h  virt-viewer-about.xml  virt-viewer-app.c  virt-viewer-app.h  virt-viewer-auth.c  virt-viewer-auth.h  virt-viewer-auth.xml  virt-viewer-display-spice.c  virt-viewer-display-spice.h  virt-viewer-display-vnc.c  virt-viewer-display-vte.c  virt-viewer-display-vte.h  virt-viewer-display.c  virt-viewer-display.h  virt-viewer-events.c  virt-viewer-file-transfer-dialog.c  virt-viewer-file.c  virt-viewer-file.h  virt-viewer-guest-details.xml  virt-viewer-main.c  virt-viewer-notebook.c  virt-viewer-session-spice.c  virt-viewer-session-vnc.c  virt-viewer-session.c  (+13 more)
src/resources/: virt-viewer.gresource.xml
src/resources/ui/: remote-viewer-connect.ui  virt-viewer-file-transfer-dialog.ui  virt-viewer-preferences.ui  virt-viewer.ui
src/view/: autoDrawer.c  ovBox.c
tests/: Makefile.am  test-hotkeys.c  test-monitor-alignment.c  test-monitor-mapping.c
